--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "crisp-sdk-web": "^1.0.21",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "flag-icons": "^7.0.2",
     "form-data": "^4.0.0",
+    "i18next": "^23.7.6",
+    "i18next-resources-to-backend": "^1.2.0",
     "mailgun.js": "^9.2.1",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
@@ -29,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.3.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.21.1",
     "stripe": "^13.2.0"
